# cpp-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  debug.sh  release.sh
cmake/: FindSDL2.cmake
src/: camera.hpp  color.hpp  engine.hpp  main.cpp  math.hpp  ray.hpp  sphere.hpp  vector.hpp  world.hpp
